--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -1,9 +1,18 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "target": "ESNext",
-    "module": "NodeNext",
-    "outDir": "../../dist-electron",
-    "skipLibCheck": true
-  }
+    "compilerOptions": {
+        "strict": true,
+        "target": "ES2022",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "outDir": "../../dist-electron",
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "noImplicitAny": false
+    },
+    "files": [
+        "main.ts",
+        "preload.ts"
+    ]
 }
