--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
+    "motion-react": "^0.15.0-alpha.1",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
