downgraded ts to fix build errors, switched to hashrouter for routing in production

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/ui/*"]
-    }
+    },
+    "noUnusedParameters": false,
+    // Removed unsupported option for TS 5.3.x
   }
 }
