--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -9,7 +9,8 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
-        "noImplicitAny": false
+        "noImplicitAny": false,
+        "noUnusedParameters": false
     },
     "files": [
         "main.ts",
