--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -10,6 +10,7 @@
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
         "noImplicitAny": false,
+        "noUnusedLocals": false,
         "noUnusedParameters": false
     },
     "files": [
