static keyboard integrated

--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.7.0",
+    "react-simple-keyboard": "^3.8.99",
     "recharts": "^2.15.4",
+    "simple-keyboard": "^3.8.70",
+    "simple-keyboard-layouts": "^3.4.112",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2",
