--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -60,8 +59,8 @@
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.7.0",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2",
     "zod": "^4.0.5",
     "zustand": "^5.0.6"
@@ -72,6 +71,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "electron": "^37.2.3",
     "electron-builder": "^26.0.12",
@@ -80,7 +80,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "npm-run-all": "^4.1.5",
-    "tw-animate-css": "^1.3.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
